--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -9,10 +9,10 @@
 }
 
 :host {
-	position: relative;
+	position: absolute;
 	z-index: @z-index-imagery-status;
 	display: flex;
-	flex-grow: 1;
+	width: 100%;
 	line-height: 24px;
 	color: white;
 	justify-content: space-between;
@@ -22,7 +22,6 @@
 		background: rgba(0, 0, 0, 0.6);
 		box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
 		box-sizing: border-box;
-		padding: 7px 5px;
 
 		&.active {
 			background: rgba(0, 0, 0, 0.8);
