--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -377,6 +377,11 @@
   	"active":  {{ getv "/ansyn/login/active" "false" }},
   	"authorizedPath": "/"
   },
+  "credentialsConfig": {
+  	"baseUrl": "/",
+  	"active":  {{ getv "/ansyn/credentials/active" "false" }},
+  	"triangles": "none"
+  },
   "visualizersConfig": {
     "FrameVisualizer": {
       "colors": {
