layer tooltip is cut

--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layer-menu/layer-menu.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layer-menu/layer-menu.component.less
@@ -14,10 +14,8 @@
 	border-radius: 4px;
 	background: #FFFFFF;
 	pointer-events: none;
-	height: 100%;
-	position: absolute;
+	position: fixed;
 	right: 0;
-	top: 0;
 
 	button {
 		background: transparent;
