--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layer/layer.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layer/layer.component.less
@@ -8,6 +8,11 @@ div.layer {
 	display: flex;
 	padding: 2.5px 5px;
 	position: relative;
+	justify-content: space-between;
+
+	div.layer-name {
+		display: flex;
+	}
 
 	&:hover span.only-filter {
 		visibility: visible;
