--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -53,6 +53,8 @@ div.container {
 		div.actions {
 			display: flex;
 			align-items: center;
+			position: absolute;
+			right: 30px;
 		}
 
 		button.down-arrow {
@@ -84,7 +86,6 @@ div.container {
 
 		button.add-layer, ansyn-import-layer {
 			display: none;
-			position: relative;
 		}
 
 		div.show-all {
