--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.html
@@ -4,11 +4,11 @@
 
 		<span class="title" [class.title-disabled]="showOnlyFavorite">{{ filter.displayName | translate }}</span>
 
-		<span *ngIf="!show && metadataFromState && metadataFromState.isFiltered() && !showOnlyFavorite"
+		<span *ngIf="metadataFromState && metadataFromState.collapse && metadataFromState.isFiltered() && !showOnlyFavorite"
 			  class="filtered">(filtered)</span>
 
-		<button [@rotateArrow]="show" #downArrow class="down-arrow" [disabled]="disabledShowAll"
-				(click)="show = !show">
+		<button [@rotateArrow]="!metadataFromState.collapse" #downArrow class="down-arrow" [disabled]="disabledShowAll"
+				(click)="toggleVisible()">
 		</button>
 
 		<div *ngIf="!showOnlyFavorite" class="show-all">
@@ -21,7 +21,7 @@
 	</div>
 
 	<ng-template #filterBody>
-		<div class="fields" *ngIf="!showOnlyFavorite" #fields [@fieldsTrigger]="show">
+		<div class="fields" *ngIf="!showOnlyFavorite" #fields [@fieldsTrigger]="!metadataFromState.collapse">
 			<div *ngIf="metadataFromState" [ngSwitch]="metadataFromState?.type">
 
 				<ansyn-enum-filter-container
@@ -55,12 +55,12 @@
 		</div>
 
 		<div class="show-more-less"
-			 *ngIf="!isLongFiltersList && !isGotSmallListFromProvider && !showOnlyFavorite && show">
+			 *ngIf="!isLongFiltersList && !isGotSmallListFromProvider && !showOnlyFavorite && !metadataFromState.collapse">
 			<span (click)="toggleShowMoreLess()">{{'SHOW MORE' | translate}}</span>
 		</div>
 
 		<div class="show-more-less"
-			 *ngIf="isLongFiltersList && !isGotSmallListFromProvider && !showOnlyFavorite && show">
+			 *ngIf="isLongFiltersList && !isGotSmallListFromProvider && !showOnlyFavorite && !metadataFromState.collapse">
 			<span (click)="toggleShowMoreLess()">{{'SHOW LESS' | translate}}</span>
 		</div>
 
