--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -27,7 +27,7 @@ div.container {
 
 				ansyn-layer-menu {
 					visibility: visible;
-					transform: translateX(70%);
+					transform: translate(60%, -5px);
 					opacity: 1;
 					pointer-events: auto;
 				}
