added credentials service

--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -6,5 +6,17 @@
 	z-index: @z-index-credentials;
 	height: 28px;
 	width: 28px;
-	background: url('/assets/logo_old.svg');
+	background: url('/assets/logo_old.svg'); //temporery due to lack of logo
 	}
+
+.credentials-message{
+	position: relative;
+	padding-top: 5px;
+	padding-right: 5px;
+	z-index: @z-index-credentials;
+}
+
+.credentials{
+	display: flex;
+	flex-direction: row-reverse;
+}
