--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -382,7 +382,7 @@
   	"authorizedPath": "/"
   },
   "credentialsConfig": {
-  	"baseUrl": "/",
+  	"baseUrl": "assets/config/credentials.json",
   	"active":  {{ getv "/ansyn/credentials/active" "false" }},
   	"triangles": "none"
   },
