pin unpin icons

--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -160,7 +160,7 @@
 
 /* '' */
 .icon-pin:before {
-	content: '\e820';
+	content: '\e84a';
 }
 
 /* '' */
@@ -270,7 +270,7 @@
 
 /* '' */
 .icon-unpin:before {
-	content: '\e836';
+	content: '\e84b';
 }
 
 /* '' */
