--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -4,9 +4,15 @@
 .credentials-button {
 	position: relative;
 	z-index: @z-index-credentials;
-	height: 28px;
-	width: 28px;
-	background: url('/assets/logo_old.svg'); //temporery due to lack of logo
+	background: transparent;
+	border: transparent;
+	outline: transparent;
+	left: 10px;
+
+	i {
+		color: white;
+		font-size: 40px;
+	}
 }
 
 .credentials-message {
