--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -348,8 +348,7 @@
     },
 	 "httpTimeout": "3000",
 	 "isFooterCollapsible": {{ getv "/ansyn/iscollapsible" "false" }},
-	 "enable3D": {{ getv "/ansyn/3d/enable" "true" }},
-	 "showCredentials": {{getv "/ansyn/showcredentials" "false"}}
+	 "enable3D": {{ getv "/ansyn/3d/enable" "true" }}
   },
   "olConfig": {
   	 "needToUseLayerExtent": false,
@@ -386,7 +385,7 @@
   "credentialsConfig": {
   	"baseUrl": "assets/config/credentials.json",
   	"active":  {{ getv "/ansyn/credentials/active" "false" }},
-  	"triangles": "none"
+  	"noCredentialsMessage": "invalid credentials"
   },
   "visualizersConfig": {
     "FrameVisualizer": {
