--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -1,5 +1,6 @@
 <div class="credentials">
 	<button class="credentials-button" (click)="setIsOpenMode()">
+		<i class="icon-credentials"></i>
 	</button>
 
 	<div class="credentials-message" *ngIf="isOpen"> {{this.credentialsMessage}} </div>
