--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -1,4 +1,7 @@
-<button class="credentials-button" (click)="setIsOpenMode()">
-</button>
+<div class="credentials">
+	<button class="credentials-button" (click)="setIsOpenMode()">
+		<i class="icon-credentials"></i>
+	</button>
 
-<div *ngIf="isOpen"></div>
+	<div class="credentials-message" *ngIf="isOpen"> {{this.credentialsMessage}} </div>
+</div>
