--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -1,10 +1,28 @@
 @import 'ansyn/less/common';
 @import 'ansyn/less/z-index-globals';
 
-.credentials-button{
+.credentials-button {
 	position: relative;
 	z-index: @z-index-credentials;
-	height: 28px;
-	width: 28px;
-	background: url('/assets/logo_old.svg');
+	background: transparent;
+	border: transparent;
+	outline: transparent;
+	left: 10px;
+
+	i {
+		color: white;
+		font-size: 40px;
 	}
+}
+
+.credentials-message {
+	position: relative;
+	padding-top: 5px;
+	padding-right: 5px;
+	z-index: @z-index-credentials;
+}
+
+.credentials {
+	display: flex;
+	flex-direction: row-reverse;
+}
