--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/back-to-base-map/back-to-base-map.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/back-to-base-map/back-to-base-map.component.less
@@ -8,11 +8,10 @@
 		button {
 			display: flex;
 			align-items: center;
-			height: @status-bar-height;
 			border: none;
 			background-color: @background-color-5;
 			color: @background-color-12;
-			padding: 0;
+			padding: 0 5px 0 0;
 
 			i {
 				font-size: @icon-size;
@@ -33,6 +32,7 @@
 				button {
 					font-size: 0;
 					overflow: hidden;
+					padding: 0;
 
 					&.small-icon-button {
 						margin: 0;
@@ -49,6 +49,7 @@
 			button {
 				font-size: 0;
 				overflow: hidden;
+				padding: 0;
 
 				&.small-icon-button {
 					margin: 0;
