add sensor name and fix position

--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/back-to-base-map/back-to-base-map.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/back-to-base-map/back-to-base-map.component.less
@@ -2,10 +2,12 @@
 @import "ansyn/less/colors";
 
 :host {
-
+	height: 100%;
 	div.back-to-world-view {
-
+		display: flex;
+		height: 100%;
 		button {
+			height: 100%;
 			display: flex;
 			align-items: center;
 			border: none;
