--- a/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
@@ -5,6 +5,7 @@
 	top: 6px;
 	right: 5px;
 	display: flex;
+	flex: 1;
 	justify-content: flex-end;
 	max-width: 45%;
 
@@ -14,12 +15,14 @@
 		margin: 0 2.5px;
 		padding: 0 5px;
 		display: flex;
+		overflow: auto;
+		flex: 1;
 		align-items: center;
-		overflow: hidden;
 		justify-content: flex-start;
 
 		span.text {
 			text-overflow: ellipsis;
+			overflow: hidden;
 			white-space: nowrap;
 			font-size: 12px;
 		}
