--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -11,6 +11,7 @@
 	box-shadow: 0 -10px 20px 0 rgba(0, 0, 0, 0.3);
 	display: flex;
 	transform: translate(0, -100%);
+	justify-content: flex-end;
 
 	ansyn-imagery-status {
 		position: relative;
@@ -21,7 +22,6 @@
 		height: 100%;
 		color: white;
 		display: flex;
-		flex: 1;
 		justify-content: flex-end;
 
 		.selected-case {
