--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -15,14 +15,14 @@
 
 	ansyn-imagery-status {
 		position: relative;
-		height: 100%;
-		flex-grow: 1;
+		align-items: center;
 	}
 	.status-bar {
 		height: 100%;
 		color: white;
 		display: flex;
-		justify-content: flex-end;
+		flex: 1;
+		justify-content: space-between;
 
 		.selected-case {
 			button.share-link {
