set alert position (#2669)

--- a/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
@@ -2,8 +2,7 @@
 
 :host {
 	position: absolute;
-	top: 6px;
-	right: 5px;
+	right: 0;
 	display: flex;
 	justify-content: flex-end;
 	max-width: 33%;
