status bar style

--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/back-to-base-map/back-to-base-map.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/back-to-base-map/back-to-base-map.component.less
@@ -4,7 +4,7 @@
 :host {
 
 	div.back-to-world-view {
-		height: 100%;
+		height: @status-bar-height;
 		button {
 			display: flex;
 			align-items: center;
