--- a/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
@@ -4,6 +4,8 @@
 	position: absolute;
 	right: 0;
 	display: flex;
+	height: 100%;
+	align-items: center;
 	justify-content: flex-end;
 	max-width: 33%;
 
@@ -20,6 +22,7 @@
 		span.text {
 			text-overflow: ellipsis;
 			white-space: nowrap;
+			overflow: hidden;
 			font-size: 12px;
 		}
 		span.indicator {
