--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filters-collection/filters-collection.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filters-collection/filters-collection.component.html
@@ -14,7 +14,9 @@
 		[label]="'Search' | translate">
 	</ansyn-input>
 
-	<div class="allFilters scrolled">
+	<div class="allFilters scrolled"
+         #scrollElement
+		 (scroll)="scrollHandler($event)">
 		<ng-container *ngIf="filters?.length; else noFiltersFound">
 			<ansyn-filter-container
 				*ngFor="let filter of filters"
