--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -1,28 +1,66 @@
 @import 'ansyn/less/common';
 @import 'ansyn/less/z-index-globals';
 
-.credentials-button {
-	position: relative;
-	z-index: @z-index-credentials;
-	background: transparent;
-	border: transparent;
-	outline: transparent;
-	left: 10px;
+:host {
+	.buttons {
+		position: relative;
+		z-index: @z-index-credentials;
+		background: transparent;
+		border: transparent;
+		outline: transparent;
 
-	i {
+		line-height: 0;
+		left: 5px;
+		top: 6px;
+		text-align: center;
+		margin-bottom: 5px;
+		background-color: rgba(0, 0, 0, 0.3);
 		color: white;
-		font-size: 40px;
+		padding: 4px;
+
+		&:hover:not(:disabled) {
+			background: rgba(0, 0, 0, 0.5);
+		}
+
+		button {
+			position: relative;
+			padding: 4px 5px;
+			vertical-align: middle;
+			color: white;
+			line-height: 0;
+
+			&.small-icon-button {
+				font-size: 17px;
+				background: transparent;
+				border: none;
+				outline: none;
+				padding: 4px 6px;
+				align-items: center;
+
+				z-index: 1;
+				height: 25px;
+
+				&:disabled {
+					opacity: .6;
+				}
+			}
+
+			.icon::before {
+				vertical-align: middle;
+				display: block;
+			}
+		}
 	}
-}
 
-.credentials-message {
-	position: relative;
-	padding-top: 5px;
-	padding-right: 5px;
-	z-index: @z-index-credentials;
-}
+	.credentials-message {
+		position: relative;
+		padding-top: 5px;
+		padding-right: 5px;
+		z-index: @z-index-credentials;
+	}
 
-.credentials {
-	display: flex;
-	flex-direction: row-reverse;
+	.credentials {
+		display: flex;
+		flex-direction: row-reverse;
+	}
 }
