--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.html
@@ -17,7 +17,7 @@
 	</div>
 
 	<div *ngIf="(isLoading$ | async); else filterBody">
-		<ansyn-animated-ellipsis [text]="'Loading' | translate"></ansyn-animated-ellipsis>
+		<ansyn-animated-ellipsis [text]="'Loading' | translate" [rtl]="'rtl' === ('direction' | translate)"></ansyn-animated-ellipsis>
 	</div>
 
 	<ng-template #filterBody>
