--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
@@ -1,7 +1,7 @@
 <div class="container" [ngClass]="collection.type">
 
 	<div class="title-row">
-		<span class="title">{{collection.type + ' Layers' | translate}}</span>
+		<span class="title">{{collection.type | translate}}</span>
 
 		<div class="actions">
 			<button [@rotateArrow]="show"
