--- a/src/app/@ansyn/map-facade/components/ansyn-loader/ansyn-loader.component.html
+++ b/src/app/@ansyn/map-facade/components/ansyn-loader/ansyn-loader.component.html
@@ -2,4 +2,4 @@
 	<div class="loader-outter"></div>
 	<div class="loader-inner"></div>
 </div>
-<ansyn-animated-ellipsis [text]="loaderText"></ansyn-animated-ellipsis>
+<ansyn-animated-ellipsis [text]="loaderText" [rtl]="rtl"></ansyn-animated-ellipsis>
