--- a/src/app/@ansyn/map-facade/components/imagery-loader/imagery-loader.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-loader/imagery-loader.component.html
@@ -1,1 +1,1 @@
-<ansyn-loader [show]="show" [loaderText]="loaderText"></ansyn-loader>
+<ansyn-loader [show]="show" [loaderText]="loaderText | translate" [rtl]="'rtl' === ('direction' | translate)"></ansyn-loader>
