--- a/src/app/@ansyn/map-facade/components/welcome-notification/welcome-notification.component.less
+++ b/src/app/@ansyn/map-facade/components/welcome-notification/welcome-notification.component.less
@@ -14,6 +14,12 @@
 	outline: none;
 	animation: moveIntoView 1s;
 
+	div {
+		&.rtl {
+			direction: rtl;
+		}
+	}
+
 	&:focus {
 		z-index: @z-index-welcome-notification;
 
