--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -1,7 +1,14 @@
 <div class="credentials">
-	<button class="credentials-button" (click)="setIsOpenMode()">
-		<i class="icon-credentials"></i>
-	</button>
 
-	<div class="credentials-message" *ngIf="isOpen"> {{this.credentialsMessage}} </div>
+	<div class="buttons">
+		<button [attr.tooltip-value]="'Credentials' | translate"
+				class="small-icon-button"
+				tooltip-class="'left'"
+				(click)="setIsOpenMode()">
+			<i class="icon-credentials"></i>
+		</button>
+	</div>
+
+	<div [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''" class="credentials-message"
+		 *ngIf="isOpen"> {{this.credentialsMessage}} </div>
 </div>
