--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -1,6 +1,6 @@
 <ansyn-imagery-status
 	*ngIf="!hideOverlay && activeMap"
-	[mapId]="activeMap.id"
+	[map]="activeMap"
 >
 </ansyn-imagery-status>
 <div class="status-bar" [class.separated-state]="!hideOverlay">
