--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -9,6 +9,10 @@
 	min-width: 170px;
 	transform: translateY(calc(~'-100%'));
 
+	/deep/ .treeview-container {
+		overflow-y: hidden !important;
+	}
+
 	/deep/ .treeview-container .row-item {
 		display: flex;
 		color: ghostwhite;
