--- a/src/app/@ansyn/map-facade/components/animated-ellipsis/animated-ellipsis.component.less
+++ b/src/app/@ansyn/map-facade/components/animated-ellipsis/animated-ellipsis.component.less
@@ -1,51 +1,59 @@
-.text {
-	margin-top: 10px;
-	font-size: medium;
-	color: white;
+:host {
 
-	span {
-		font-size: large;
-		animation-name: blink;
-		animation-duration: 1.4s;
-		animation-iteration-count: infinite;
-		animation-fill-mode: both;
+	&.rtl {
+		direction: rtl;
+		text-align: end;
 	}
 
-	span:nth-child(2) {
-		animation-delay: .2s;
+	.text {
+		margin-top: 10px;
+		font-size: medium;
+		color: white;
+
+		span {
+			font-size: large;
+			animation-name: blink;
+			animation-duration: 1.4s;
+			animation-iteration-count: infinite;
+			animation-fill-mode: both;
+		}
+
+		span:nth-child(2) {
+			animation-delay: .2s;
+		}
+
+		span:nth-child(3) {
+			animation-delay: .4s;
+		}
 	}
 
-	span:nth-child(3) {
-		animation-delay: .4s;
+	@keyframes loader-1-outter {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(360deg);
+		}
 	}
-}
 
-@keyframes loader-1-outter {
-	0% {
-		transform: rotate(0deg);
+	@keyframes loader-1-inner {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(-360deg);
+		}
 	}
-	100% {
-		transform: rotate(360deg);
-	}
-}
 
-@keyframes loader-1-inner {
-	0% {
-		transform: rotate(0deg);
-	}
-	100% {
-		transform: rotate(-360deg);
-	}
-}
-
-@keyframes blink {
-	0% {
-		opacity: .2;
-	}
-	20% {
-		opacity: 1;
-	}
-	100% {
-		opacity: .2;
+	@keyframes blink {
+		0% {
+			opacity: .2;
+		}
+		20% {
+			opacity: 1;
+		}
+		100% {
+			opacity: .2;
+		}
 	}
 }
