--- a/src/app/@ansyn/map-facade/components/welcome-notification/welcome-notification.component.html
+++ b/src/app/@ansyn/map-facade/components/welcome-notification/welcome-notification.component.html
@@ -1,6 +1,6 @@
-<div class="welcome-notification">
-	<header>{{config.headerText}}</header>
+<div class="welcome-notification" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
+	<header>{{config.headerText | translate}}</header>
 	<main>
-		<span>{{config.mainText}}</span> <span class="icon-map-pin-point"></span>
+		<span>{{config.mainText | translate}}</span> <span class="icon-map-pin-point"></span>
 	</main>
 </div>
