--- a/src/app/@ansyn/map-facade/components/ansyn-popover/ansyn-popover.component.less
+++ b/src/app/@ansyn/map-facade/components/ansyn-popover/ansyn-popover.component.less
@@ -34,10 +34,10 @@
 		transition: .4s;
 		background: transparent;
 		position: absolute;
-		transform: translate(0, 0);
 		top: 0;
 		left: 0;
 		display: flex;
+		margin: 0 25%;
 	}
 
 	.pop-hover:hover {
