--- a/src/app/@ansyn/ansyn/assets/styles/tooltip.css
+++ b/src/app/@ansyn/ansyn/assets/styles/tooltip.css
@@ -10,51 +10,39 @@
 }
 
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="top"]:after {
+	/*left: auto;*/
+	bottom: auto;
 	transform: translateY(-100%);
 }
 
-[tooltip-value]:not(.active):not(:disabled)[tooltip-class="top"]:hover:after {
-	transform: translateY(calc(-100% - 15px));
-}
-
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="top"][tooltip-class*="right"]:after {
-	transform: translate(25%, calc(-100%));
-}
-
-[tooltip-value]:not(.active):not(:disabled)[tooltip-class*="top"][tooltip-class*="right"]:hover:after {
-	transform: translate(50%, calc(-100% - 15px));
+	left: 0;
+	right: auto;
 }
 
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="top"][tooltip-class*="left"]:after {
-	transform: translate(-25%, calc(-100%));
+	left: auto;
+	right: 0;
 }
 
-[tooltip-value]:not(.active):not(:disabled)[tooltip-class*="top"][tooltip-class*="left"]:hover:after {
-	transform: translate(-50%, calc(-100% - 15px));
+[tooltip-value]:not(.active):not(:disabled)[tooltip-class*="top"]:hover:after {
+	transform: translateY(calc(-100% - 15px));
 }
 
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="bottom"]:after {
+	left: auto;
+	top: auto;
+	bottom: 0;
 	transform: translateY(100%);
 }
 
-[tooltip-value]:not(.active):not(:disabled)[tooltip-class*="bottom"]:hover:after {
-	transform: translate(0, calc(100% + 15px));
-}
-
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="bottom"][tooltip-class*="right"]:after {
-	transform: translate(25%, calc(100%));
-}
-
-[tooltip-value]:not(.active):not(:disabled)[tooltip-class*="bottom"][tooltip-class*="right"]:hover:after {
-	transform: translate(50%, calc(100% + 15px));
+	left: 0;
+	right: auto;
 }
 
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="bottom"][tooltip-class*="left"]:after {
-	transform: translate(-25%, calc(100%));
-}
-
-[tooltip-value]:not(.active):not(:disabled)[tooltip-class*="bottom"][tooltip-class*="left"]:hover:after {
-	transform: translate(-50%, calc(100% + 15px));
+	right: 0;
 }
 
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="bottom"]:hover:after {
@@ -62,14 +50,18 @@
 }
 
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="right"]:not([tooltip-class*="top"]):not([tooltip-class*="bottom"]):after {
+	right: 0;
 	transform: translate(100%, 0);
 }
 
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="right"]:not([tooltip-class*="top"]):not([tooltip-class*="bottom"]):hover:after {
+	left: auto;
 	transform: translate(calc(100% + 15px), 0);
 }
 
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="left"]:not([tooltip-class*="top"]):not([tooltip-class*="bottom"]):after {
+	left: 0;
+	right: auto;
 	transform: translate(-100%, 0);
 }
 
@@ -89,8 +81,7 @@
 	opacity: 0;
 	position: absolute;
 	padding: 0 10px;
-	right: auto;
-	left: auto;
+	left: 0;
 	top: 0;
 	background: black;
 	transition: visibility .3s, transform .3s, opacity .3s;
