fix credential design

--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -14,13 +14,9 @@
 		top: 6px;
 		text-align: center;
 		margin-bottom: 5px;
-		background-color: rgba(0, 0, 0, 0.3);
 		color: white;
 		padding: 4px;
-
-		&:hover:not(:disabled) {
-			background: rgba(0, 0, 0, 0.5);
-		}
+		height: 100%;
 
 		button {
 			position: relative;
@@ -28,6 +24,7 @@
 			vertical-align: middle;
 			color: white;
 			line-height: 0;
+			height: 100%;
 
 			&.small-icon-button {
 				font-size: 17px;
@@ -54,9 +51,15 @@
 
 	.credentials-message {
 		position: relative;
-		padding-top: 5px;
-		padding-right: 5px;
+		padding: 10px;
 		z-index: @z-index-credentials;
+
+		background-color: rgba(0, 0, 0, 0.3);
+		color: white;
+		align-self: center;
+		&:hover:not(:disabled) {
+			background: rgba(0, 0, 0, 0.5);
+		}
 	}
 
 	.credentials {
