--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.less
@@ -29,6 +29,8 @@ div.container {
 			font-size: 12px;
 			line-height: 100%;
 			color: #FFFFFF;
+			padding-left: 4px;
+			padding-right: 4px;
 		}
 
 		button.down-arrow {
