enable event propegation in order to close the context menu

--- a/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.html
@@ -14,7 +14,7 @@
 	 tooltip-class="bottom left">
 	<img [src]="geoRegisteredProperties.compass"
 		 (click)="toggleNorth()"
-		 (mousedown)="stopPropagation($event)"
 		 [style.transform]="'rotate(' + this[geoRegisteredProperties.rotatePointer] + 'rad)'"
 		 [style.cursor]="isRotating ? '' : 'pointer'"/>
+	    <!--(mousedown)="stopPropagation($event)"-->
 </div>
